# sustech-bb-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/bb_cli/: __main__.py  auth.py  cli.py  client.py  config.py  context.py  formatting.py
src/bb_cli/commands/: announcements.py  contents.py  courses.py  download.py  grades.py  login.py  nav.py  show.py
tasks/: lessons.md  todo.md
