[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sustech-bb-cli"
version = "0.1.0"
description = "CLI tool for SUSTech Blackboard LMS"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "playwright>=1.40",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bb_cli"]

[project.scripts]
bb = "bb_cli.cli:cli"
